--- a/apirest/.gitignore
+++ b/apirest/.gitignore
@@ -1,31 +1,13 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+#HELP.md
+#.DS_Store
+#*.class
 
 ### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
+#.idea
+#target/
+#*.iws
+#*.iml
+#*.ipr
 
 ### VS Code ###
-.vscode/
+#.vscode/
