Aggiunta connesione postgres db di prova
Utilizzato docker preso da database in kafka-db con sql definito in schema-postgres.sql
Guida seguita qui: http://zetcode.com/springboot/postgresql/

--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 server.port=9999
+
+spring.main.banner-mode=off
+logging.level.org.springframework=ERROR
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+
+# jdbc:postgresql://{postgre db ip}:{postgre db port}/{db name}
+spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/sasso_database
+spring.datasource.username=user
+spring.datasource.password=user
+
+# used to avoid an issue
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
