Implementata la connesione a entrambi i db, jpa per postgres e jdbc per timescale

--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -9,9 +9,15 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 
 # jdbc:postgresql://{postgre db ip}:{postgre db port}/{db name}
-spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/sasso_database
-spring.datasource.username=user
-spring.datasource.password=user
+spring.postgres.driverClassName=org.postgresql.Driver
+spring.postgres.url=jdbc:postgresql://192.168.99.100:6543/rainbow_database
+spring.postgres.username=user
+spring.postgres.password=user
+
+spring.timescale.driverClassName=org.postgresql.Driver
+spring.timescale.url=jdbc:postgresql://192.168.99.100:3456/sasso_database
+spring.timescale.username=user
+spring.timescale.password=user
 
 # used to avoid an issue
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
