--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 
 # jdbc:postgresql://{postgre db ip}:{postgre db port}/{db name}
-spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/sasso_database
+spring.datasource.url=jdbc:postgresql://localhost:6543/rainbow_database
 spring.datasource.username=user
 spring.datasource.password=user
 
