--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -10,12 +10,12 @@ spring.datasource.platform=postgres
 
 # jdbc:postgresql://{postgre db ip}:{postgre db port}/{db name}
 spring.postgres.driverClassName=org.postgresql.Driver
-spring.postgres.url=jdbc:postgresql://192.168.99.100:6543/rainbow_database
+spring.postgres.url=jdbc:postgresql://192.168.99.100:6543/postgre
 spring.postgres.username=user
 spring.postgres.password=user
 
 spring.timescale.driverClassName=org.postgresql.Driver
-spring.timescale.url=jdbc:postgresql://192.168.99.100:3456/sasso_database
+spring.timescale.url=jdbc:postgresql://192.168.99.100:3456/timescale
 spring.timescale.username=user
 spring.timescale.password=user
 
