--- a/.github/workflows/docker-checker.yml
+++ b/.github/workflows/docker-checker.yml
@@ -6,28 +6,28 @@ jobs:
   docker_checker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo content
-      - uses: actions/checkout@v2
+    - name: Checkout repo content
+      uses: actions/checkout@v2
 
-      - name: Lint Dockerfile
-        uses: brpaz/hadolint-action@master
-        with:
-          dockerfile: "docker/Dockerfile"
+    - name: Lint Dockerfile
+      uses: brpaz/hadolint-action@master
+      with:
+        dockerfile: "docker/Dockerfile"
 
 
-      #- name: Build with docker-compose
-      #  run: docker-compose -f docker/docker-compose.yml build --verbose
+    #- name: Build with docker-compose
+    #  run: docker-compose -f docker/docker-compose.yml build --verbose
 
-      - name: Slack Notification
-        uses: homoluctus/slatify@v2.0.1
-        if: failure()
-        with:
-          type: ${{ job.status }}
-          job_name: 'Docker check'
-          mention: 'here'
-          mention_if: 'failure'
-          channel: '#devops_software'
-          username: 'Docker checker'
-          url: ${{ secrets.SLACK_SW_WEBHOOK }}
-          commit: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Slack Notification
+      uses: homoluctus/slatify@v2.0.1
+      if: failure()
+      with:
+        type: ${{ job.status }}
+        job_name: 'Docker check'
+        mention: 'here'
+        mention_if: 'failure'
+        channel: '#devops_software'
+        username: 'Docker checker'
+        url: ${{ secrets.SLACK_SW_WEBHOOK }}
+        commit: true
+        token: ${{ secrets.GITHUB_TOKEN }}
