Spostati alcuni valori in application properties

--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.timescale.password=user
 
 # used to avoid an issue
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+
+security.signing-key=MaYzkSjmkzPC57L
+security.token-expiration=36000
+security.encoding-strength=512
