Impostata durata token in secondi dalle properties

--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -25,5 +25,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
 security.signing-key=MaYzkSjmkzPC57L
-security.token-expiration=36000
+# duration of token in seconds
+security.token-expiration=3600
 security.encoding-strength=512
