prima bozza two factor authentication

--- a/apirest/pom.xml
+++ b/apirest/pom.xml
@@ -93,6 +93,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency> /*aggiunta il 19-03-2020 per mandare richieste http da partee delle api*/
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
