--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -28,3 +28,6 @@ security.signing-key=MaYzkSjmkzPC57L
 # duration of token in seconds
 security.token-expiration=3600
 security.encoding-strength=512
+
+
+telegram.url=http://localhost:8080
