--- a/.github/workflows/checker.yml
+++ b/.github/workflows/checker.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
     - name: Checkout repo content
       uses: actions/checkout@v2
+    - name: Git fetch unshallow
+      uses: git fetch --unshallow
     - name: Setup JDK 11
       uses: actions/setup-java@v1
       with:
