--- a/apirest/pom.xml
+++ b/apirest/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.redroundrobin</groupId>
     <artifactId>apirest</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v0.0.2-dev</version>
     <name>apirest</name>
     <description>API Rest service for ThiReMa</description>
 
