--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -11,12 +11,21 @@ on:
       - feature/**
 
 jobs:
-  ci_check:
+  api_update:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repo content
+    - name: Checkout swe-kafka-db
       uses: actions/checkout@v2
       with:
+        repository: RedRoundRobin/swe-kafka-db
+        path: swe-kafka-db
+        ref: develop
+    - name: Start databases
+      run: docker-compose -f kafka/docker-compose.yml up -d
+    - name: Checkout swe-api
+      uses: actions/checkout@v2
+      with:
+        path: swe-api
         fetch-depth: 0
     - name: Setup JDK 11
       uses: actions/setup-java@v1
@@ -26,6 +35,8 @@ jobs:
       run: mvn clean verify -Dspring.application.admin.enabled=true -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN_KEY }} --file apirest/pom.xml -e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Move new api in apirest folder
+      run: mv apirest/target/openapi.yaml apirest/
     - name: Commit files
       run: |
         git config --local user.email "action@github.com"
