--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -20,23 +20,19 @@ jobs:
         repository: RedRoundRobin/swe-kafka-db
         path: swe-kafka-db
         ref: develop
-    - name: Change directory
-      run: cd swe-kafka-db
     - name: Start databases
-      run: docker-compose -f kafka/docker-compose.yml up -d
+      run: docker-compose -f swe-kafka-db/kafka/docker-compose.yml up -d
     - name: Checkout swe-api
       uses: actions/checkout@v2
       with:
         path: swe-api
         fetch-depth: 0
-    - name: Change directory
-      run: cd swe-api
     - name: Setup JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
     - name: Generate API 
-      run: mvn clean verify -Dspring.application.admin.enabled=true -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN_KEY }} --file apirest/pom.xml -e
+      run: mvn clean verify -Dspring.application.admin.enabled=true -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN_KEY }} --file swe-api/apirest/pom.xml -e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Move new api in apirest folder
