--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -4,11 +4,6 @@ on:
   push:
     branches: 
       - develop
-      - feature/**
-  pull_request:
-    branches: 
-      - develop
-      - feature/**
 
 jobs:
   api_update:
@@ -48,5 +43,5 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: feature/testApiDocs
+        branch: develop
         directory: swe-api
