--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -45,3 +45,16 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: develop
         directory: swe-api
+    - name: Slack Notification
+      uses: homoluctus/slatify@v2.0.1
+      if: always()
+      with:
+        type: ${{ job.status }}
+        job_name: 'Aggiornamento documentazione API'
+        mention: 'here'
+        mention_if: 'failure'
+        channel: '#devops_software'
+        username: 'API generator'
+        url: ${{ secrets.SLACK_SW_WEBHOOK }}
+        commit: true
+        token: ${{ secrets.GITHUB_TOKEN }}
