--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -30,7 +30,7 @@ jobs:
       run: mvn clean verify -Dspring.application.admin.enabled=true -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN_KEY }} --file swe-api/apirest/pom.xml -e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Checkout swe-kafka-db
+    - name: Checkout api-docs 
       uses: actions/checkout@v2
       with:
         repository: RedRoundRobin/api-docs
