--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add apirest/openapi.yaml
+        git add openapi.yaml
         git commit -m "[BOT] Aggiornata la documentazione API" -a
       working-directory: api-docs
     - name: Push changes
