--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -1,7 +1,7 @@
 name: SWE API PUBLISHER
 
 on:
-  push:
+  pull_request:
     branches: 
       - develop
 
@@ -30,26 +30,21 @@ jobs:
       run: mvn clean verify -Dspring.application.admin.enabled=true -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN_KEY }} --file swe-api/apirest/pom.xml -e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Checkout api-docs 
-      uses: actions/checkout@v2
-      with:
-        repository: RedRoundRobin/api-docs
-        path: api-docs
-    - name: Move new api in api-docs repo
-      run: mv swe-api/apirest/target/openapi.yaml api-docs/
+    - name: Move new api in swe-api repo
+      run: mv swe-api/apirest/target/openapi.yaml swe-api/apirest/
     - name: Commit files
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add openapi.yaml
+        git add api-rest/openapi.yaml
         git commit -m "[BOT] Aggiornata la documentazione API" -a
-      working-directory: api-docs
+      working-directory: swe-api
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: master
-        directory: api-docs
+        branch: ${{ github.ref }}
+        directory: swe-api
     - name: Slack Notification
       uses: homoluctus/slatify@v2.0.1
       if: always()
