--- a/.github/workflows/checker.yml
+++ b/.github/workflows/checker.yml
@@ -5,18 +5,24 @@ on:
     branches: 
       - develop
       - master
-      - feature/**
   pull_request:
     branches: 
       - develop
       - master
-      - feature/**
 
 jobs:
   ci_check:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repo content
+    - name: Checkout swe-kafka-db
+      uses: actions/checkout@v2
+      with:
+        repository: RedRoundRobin/swe-kafka-db
+        path: swe-kafka-db
+        ref: develop
+    - name: Start databases
+      run: docker-compose -f swe-kafka-db/kafka/docker-compose.yml up -d
+    - name: Checkout swe-api
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
