--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -1,7 +1,7 @@
 name: SWE API PUBLISHER
 
 on:
-  pull_request:
+  push:
     branches: 
       - develop
 
@@ -30,24 +30,29 @@ jobs:
       run: mvn clean verify -Dspring.application.admin.enabled=true -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN_KEY }} --file swe-api/apirest/pom.xml -e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Move new api in swe-api repo
-      run: mv swe-api/apirest/target/openapi.yaml swe-api/apirest/
+    - name: Checkout api-docs
+      uses: actions/checkout@v2
+      with:
+        repository: RedRoundRobin/api-docs
+        path: api-docs
+    - name: Move new api in api-docs repo
+      run: mv swe-api/apirest/target/openapi.yaml api-docs/
     - name: Commit files
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add apirest/openapi.yaml
+        git add openapi.yaml
         git commit -m "[BOT] Aggiornata la documentazione API" -a
-      working-directory: swe-api
+      working-directory: api-docs
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.head_ref }}
-        directory: swe-api
+        github_token: ${{ secrets.GITHUB_TOKEN_ACTION }}
+        branch: master 
+        directory: api-docs
     - name: Slack Notification
       uses: homoluctus/slatify@v2.0.1
-      if: always()
+      if: failure()
       with:
         type: ${{ job.status }}
         job_name: 'Aggiornamento documentazione API'
