--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Checkout api-docs
       uses: actions/checkout@v2
       with:
-        repository: RedRoundRobin/api-docs
+        repository: Maxelweb/api-docs
         path: api-docs
     - name: Move new api in api-docs repo
       run: mv swe-api/apirest/openapi.yaml api-docs/
@@ -34,7 +34,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN_ACTION }}
         branch: master 
         directory: api-docs
-        repository: RedRoundRobin/api-docs
+        repository: Maxelweb/api-docs
     - name: Slack Notification
       uses: homoluctus/slatify@v2.0.1
       if: failure()
