--- a/.github/workflows/api-artifact.yml
+++ b/.github/workflows/api-artifact.yml
@@ -4,16 +4,34 @@ on:
   push:
     branches: 
       - develop
+
 jobs:
   api_update:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout swe-kafka-db
+      uses: actions/checkout@v2
+      with:
+        repository: RedRoundRobin/swe-kafka-db
+        path: swe-kafka-db
+        ref: develop
+        persist-credentials: false
+    - name: Start databases
+      run: docker-compose -f swe-kafka-db/kafka/docker-compose.yml up -d
     - name: Checkout swe-api
       uses: actions/checkout@v2
       with:
         path: swe-api
         fetch-depth: 0
         persist-credentials: false
+    - name: Setup JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Generate API 
+      run: mvn clean verify -Dspring.application.admin.enabled=true -Dsonar.login=${{ secrets.SONARCLOUD_LOGIN_KEY }} --file swe-api/apirest/pom.xml -e
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Checkout api-docs
       uses: actions/checkout@master
       with:
@@ -22,7 +40,7 @@ jobs:
         persist-credentials: false
         fetch-depth: 0
     - name: Move new api in api-docs repo
-      run: mv swe-api/apirest/openapi.yaml api-docs/
+      run: mv swe-api/apirest/target/openapi.yaml api-docs/
     - name: Commit files
       run: |
         git config --local user.email "action@github.com"
