--- a/apirest/pom.xml
+++ b/apirest/pom.xml
@@ -75,19 +75,10 @@
             </exclusions>
         </dependency>
 
-        <!--
         <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>2.4.0</version>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.sourcelab</groupId>
-            <artifactId>kafka-connect-client</artifactId>
-            <version>2.1.0</version>
-        </dependency>
-        -->
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
