--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -10,12 +10,12 @@ spring.datasource.platform=postgres
 
 # jdbc:postgresql://{postgre db ip}:{postgre db port}/{db name}
 spring.postgres.driverClassName=org.postgresql.Driver
-spring.postgres.url=jdbc:postgresql://localhost:6543/postgre
+spring.postgres.url=jdbc:postgresql://192.168.99.100:6543/postgre
 spring.postgres.username=user
 spring.postgres.password=user
 
 spring.timescale.driverClassName=org.postgresql.Driver
-spring.timescale.url=jdbc:postgresql://localhost:3456/timescale
+spring.timescale.url=jdbc:postgresql://192.168.99.100:3456/timescale
 spring.timescale.username=user
 spring.timescale.password=user
 
@@ -33,3 +33,5 @@ security.encoding-strength=512
 
 
 telegram.url=http://localhost:3000
+
+kafka.bootstrapAddress=192.168.99.100:9092
