--- a/.github/workflows/docker-checker.yml
+++ b/.github/workflows/docker-checker.yml
@@ -9,10 +9,10 @@ jobs:
     - name: Checkout repo content
       uses: actions/checkout@v2
 
-    - name: Lint Dockerfile
-      uses: brpaz/hadolint-action@master
-      with:
-        dockerfile: "Dockerfile"
+    # - name: Lint Dockerfile
+    #   uses: brpaz/hadolint-action@master
+    #   with:
+    #     dockerfile: "Dockerfile"
 
 
     #- name: Build with docker-compose
