--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -34,4 +34,4 @@ security.encoding-strength=512
 
 telegram.url=http://localhost:3000
 
-kafka.bootstrapAddress=192.168.99.100:9092
+kafka.bootstrapAddress=localhost:29092
