Cambiato localhost to core.host.redroundrobin.site

--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -32,6 +32,6 @@ security.tfa-token-expiration=300
 security.encoding-strength=512
 
 
-telegram.url=http://localhost:3000
+telegram.url=http://core.host.redroundrobin.site:3000
 
 kafka.bootstrapAddress=localhost:29092
