Aggiunti logs di debug a ViewGraphController e abilitati i logs di debug

--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9999
 
 spring.main.banner-mode=off
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=DEBUG
 
 spring.jpa.hibernate.ddl-auto=none
 
