Fix log debug level

--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=9999
 
 spring.main.banner-mode=off
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=ERROR
+logging.level.com.redroundrobin.thirema=DEBUG
 
 spring.jpa.hibernate.ddl-auto=none
 
