--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -36,3 +36,4 @@ security.encoding-strength=512
 telegram.url=http://core.host.redroundrobin.site:3000
 
 kafka.bootstrapAddress=localhost:29092
+kafka.topic.gatewayConfig=cfg-gw_GatewayClient
