--- a/apirest/pom.xml
+++ b/apirest/pom.xml
@@ -154,6 +154,9 @@
                     <includes>
                         <include>**/*.java</include>
                     </includes>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
 
