--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -11,12 +11,12 @@ spring.datasource.platform=postgres
 
 # jdbc:postgresql://{postgre db ip}:{postgre db port}/{db name}
 spring.postgres.driverClassName=org.postgresql.Driver
-spring.postgres.url=jdbc:postgresql://db-postgre:5432/postgre
+spring.postgres.url=jdbc:postgresql://localhost:6543/postgre
 spring.postgres.username=user
 spring.postgres.password=user
 
 spring.timescale.driverClassName=org.postgresql.Driver
-spring.timescale.url=jdbc:postgresql://db-timescale:5432/timescale
+spring.timescale.url=jdbc:postgresql://localhost:3456/timescale
 spring.timescale.username=user
 spring.timescale.password=user
 
@@ -35,4 +35,4 @@ security.encoding-strength=512
 
 telegram.url=http://thirema-telegram-bot:3000
 
-kafka.bootstrapAddress=kafka-core:29092
+kafka.bootstrapAddress=localhost:29092
