Fatto invio comando al gateway

--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -37,3 +37,4 @@ telegram.url=http://thirema-telegram-bot:3000
 
 kafka.bootstrapAddress=localhost:29092
 kafka.topic.gatewayConfig=cfg-gw_GatewayClient
+gateways.topic.telegram.prefix=cmd-
