Fine test gateway service

--- a/apirest/src/main/resources/application.properties
+++ b/apirest/src/main/resources/application.properties
@@ -38,6 +38,6 @@ telegram.url=http://thirema-telegram-bot:3000
 kafka.bootstrapAddress=localhost:29092
 
 gateways.topic.telegram.prefix=cmd-
-gateways.topic.prefix=cfg-
+gateways.topic.config.prefix=cfg-
 gateways.maxStoredPackets=9999
 gateways.maxStoringTime=5000
