--- a/apirest/pom.xml
+++ b/apirest/pom.xml
@@ -156,7 +156,7 @@
                     </includes>
                     <forkCount>3</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m ${argLine}</argLine>
                 </configuration>
             </plugin>
 
